--- a/friends_fire/requirements.txt
+++ b/friends_fire/requirements.txt
@@ -1,3 +1,13 @@
 beautifulsoup4==4.10.0
-Django==4.0.1
+certifi==2021.10.8
+charset-normalizer==2.0.10
+Django==2.2
+docopt==0.6.2
+idna==3.3
+pipreqs==0.4.11
+pytz==2021.3
 requests==2.27.1
+soupsieve==2.3.1
+sqlparse==0.4.2
+urllib3==1.26.8
+yarg==0.1.9
